@@ -16,7 +16,12 @@ CHANGES
       from being used with inheritance
 
     - Session.execute can now find binds from metadata
-
+    
+    - fixed "cascade delete" operation of dynamic relations,
+      which had only been implemented for foreign-key nulling
+      behavior in 0.4.2 and not actual cascading deletes
+      [ticket:895]
+      
 - extensions
     - the "synonym" function is now directly usable with 
       "declarative".  Pass in the decorated property using 
